<package format="2">
  <name>control_toolbox</name>
  <version>1.18.2</version>
  <description>The control toolbox contains modules that are useful across all controllers.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/control_toolbox</url>
  <url type="bugtracker">https://github.com/ros-controls/control_toolbox/issues</url>
  <url type="repository">https://github.com/ros-controls/control_toolbox/</url>

  <author>Melonee Wise</author>
  <author>Sachin Chitta</author>
  <author>John Hsu</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tinyxml</depend>
  <depend>realtime_tools</depend>
  <test_depend>rosunit</test_depend>

</package>
