<?xml version="1.0"?>
<package format="3">
  <name>control_toolbox</name>
  <version>2.0.2</version>
  <description>The control toolbox contains modules that are useful across all controllers.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/control_toolbox</url>
  <url type="bugtracker">https://github.com/ros-controls/control_toolbox/issues</url>
  <url type="repository">https://github.com/ros-controls/control_toolbox/</url>

  <author>Melonee Wise</author>
  <author>Sachin Chitta</author>
  <author>John Hsu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>

  <exec_depend>control_msgs</exec_depend>

  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
