<?xml version="1.0"?>
<package format="3">
  <name>control_toolbox</name>
  <version>4.0.1</version>
  <description>The control toolbox contains modules that are useful across all controllers.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://control.ros.org</url>
  <url type="bugtracker">https://github.com/ros-controls/control_toolbox/issues</url>
  <url type="repository">https://github.com/ros-controls/control_toolbox/</url>

  <author>Melonee Wise</author>
  <author>Sachin Chitta</author>
  <author>John Hsu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>eigen</depend>
  <depend>filters</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
